# EDA-Agent

./: .gitignore  README.md  main.py  pyproject.toml
blog/: eda_agent.ipynb  langgraph.ipynb
coding_agent/: agent.py  helpers.py  prompts.py
coding_agent_space/: hello.py
dataset_understanding/: agent.py  data_models.py  prompts.py
main_agent/: agent.py  data_models.py  helpers.py  prompts.py
plot_understanding_agent/: agent.py  prompts.py
plotting_agent/: agent.py  data_models.py  helpers.py  prompts.py
utils/: db.py  llm.py  paths.py  prompts.py
